@@ -1,5 +1,7 @@
 2008-Dec-08  yselkowitz
 
+	* bin/cygport.in (cygpatch): Try with and without --binary.
+
 	* lib/gtkmm.cygclass: Improve ORIG_PN. Fix DIFF_EXCLUDES for 2.24.
 
 	* bin/prep_fonts_dir.sh: Simplify .pcf compression code.
